--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-speech-kit": "^3.0.1",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
   },
