--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "10.0.0-rc.0",
     "@trpc/react-query": "10.0.0-rc.0",
     "@trpc/server": "10.0.0-rc.0",
+    "axios": "^1.1.3",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
